.metadata/.plugins/org.eclipse.cdt.ui/prueba.build.log
11:29:57 **** Incremental Build of configuration Debug for project prueba ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:83:3: warning: implicit declaration of function 'BSP_LED_Init' [-Wimplicit-function-declaration]
   83 |   BSP_LED_Init(LED1);
      |   ^~~~~~~~~~~~
../Core/Src/main.c:83:16: error: 'LED1' undeclared (first use in this function)
   83 |   BSP_LED_Init(LED1);
      |                ^~~~
../Core/Src/main.c:83:16: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:98:4: warning: implicit declaration of function 'BSP_LED_Toggle' [-Wimplicit-function-declaration]
   98 |    BSP_LED_Toggle(LED1);
      |    ^~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

11:29:57 Build Failed. 2 errors, 2 warnings. (took 174ms)

